--- a/BowlingLeague/BowlingLeague/Views/Shared/_Layout.cshtml
+++ b/BowlingLeague/BowlingLeague/Views/Shared/_Layout.cshtml
@@ -3,46 +3,67 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - BowlingLeague</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="~/css/Styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BowlingLeague</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+    <div class="color-byu font-weight-bolder text-white p-2">
+        <div class="container-fluid">
+            <div class="row">
+                <span class="col navbar-brand m-lg-2">Bookmark It</span>
+                <div class="col-6 text-right m-lg-2">
+                    <a asp-action="SignUpForm" asp-controller="Home" class="btn btn-sm btn-secondary navbar-btn" style="font-size:17px">Sign Up</a>
+                    <a asp-action="Bowlers" asp-controller="Home" class="btn btn-sm btn-secondary navbar-btn" style="font-size:17px">Bowlers</a>
+                    <a asp-controller="Home" asp-action="Index" asp-route-pageNum="1" class="btn btn-sm btn-secondary navbar-btn"><i class="fa fa-home" style='font-size:24px'></i></a>
                 </div>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        </div>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - BowlingLeague - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <div class="row m-1 p-1">
+        <div id="types" class="col-2">
+            <vc:teams></vc:teams>
         </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
+
+        <div class="col-1">
+
+        </div>
+
+        <div class="col-7">
+            <div>
+                @RenderBody()
+            </div>
+        </div>
+
+        <div id="types" class="col-2 text-byu">
+            <div class="container p-3">
+                <h2 class="text-byu">About Us</h2>
+                <p>Click on the buttons to learn more:</p>
+
+                <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#story">Our Story</button>
+                <div id="story" class="collapse p-2 text-byu">
+                    <p>We started out a group of Information Systems students studying at BYU, and decided to use our skills to share our love for books with the world. We started out with a few of our most beloved books and now we sell all types of book in various categories and generes.</p>
+                </div>
+
+                <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#contact">Contact Us</button>
+                <div id="contact" class="collapse p-2 text-byu">
+                    <p class="font-weight-bold">Phone Number:</p>
+                    <p>801-555-1234</p>
+                    <p class="font-weight-bold">Email:</p>
+                    <p>customerservice&#64;bookmarkit.com</p>
+                    <p class="font-weight-bold">Address:</p>
+                    <p>W308 TNRB, Provo UT, 84601</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 </html>
