Added dynamic team options

--- a/BowlingLeague/BowlingLeague/Views/Home/Bowlers.cshtml
+++ b/BowlingLeague/BowlingLeague/Views/Home/Bowlers.cshtml
@@ -33,7 +33,7 @@
             <td>@b.BowlerPhoneNumber</td>
             <td>@b.TeamID</td>
             <td>
-                <a class="btn btn-primary btn-sm" asp-controller="Home" asp-action="EditForm" asp-route-bowlerid="@b.BowlerID">Edit</a>
+                <a class="btn btn-byu btn-sm" asp-controller="Home" asp-action="EditForm" asp-route-bowlerid="@b.BowlerID">Edit</a>
             </td>
             <td>
                 <a class="btn btn-danger btn-sm" asp-controller="Home" asp-action="DeletePage" asp-route-bowlerid="@b.BowlerID">Delete</a>
