--- a/BowlingLeague/BowlingLeague/Views/Home/Index.cshtml
+++ b/BowlingLeague/BowlingLeague/Views/Home/Index.cshtml
@@ -30,6 +30,6 @@
 @*Create buttons at the bottom of the page. Highlight the button selected*@
 <div page-model="@Model.BowlerInfo" page-action="Index" page-classes-enabled="true"
      page-class="btn" page-class-normal="btn-outline-dark"
-     page-class-selected="btn-primary" class="btn-group pull-right m-1">
+     page-class-selected="btn-warning" class="btn-group pull-right m-1">
 </div>
 
