--- a/BowlingLeague/BowlingLeague/Views/Shared/_Layout.cshtml
+++ b/BowlingLeague/BowlingLeague/Views/Shared/_Layout.cshtml
@@ -41,22 +41,18 @@
             </div>
         </div>
 
-        <div id="types" class="col-2 text-byu">
+        <div id="types" class="col-2">
             <div class="container p-3">
                 <h2 class="text-byu">About Us</h2>
                 <p>Click on the buttons to learn more:</p>
 
-                <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#story">Our Story</button>
-                <div id="story" class="collapse p-2 text-byu">
-                    <p>We started out a group of Information Systems students studying at BYU, and decided to use our skills to share our love for books with the world. We started out with a few of our most beloved books and now we sell all types of book in various categories and generes.</p>
-                </div>
 
-                <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#contact">Contact Us</button>
-                <div id="contact" class="collapse p-2 text-byu">
+                <button type="button" class="btn btn-byu" data-toggle="collapse" data-target="#contact">Contact Us</button>
+                <div id="contact" class="collapse p-2">
                     <p class="font-weight-bold">Phone Number:</p>
                     <p>801-555-1234</p>
                     <p class="font-weight-bold">Email:</p>
-                    <p>customerservice&#64;bookmarkit.com</p>
+                    <p>customerservice&#64;bowlingleague.com</p>
                     <p class="font-weight-bold">Address:</p>
                     <p>W308 TNRB, Provo UT, 84601</p>
                 </div>
