--- a/BowlingLeague/BowlingLeague/Views/Home/EditForm.cshtml
+++ b/BowlingLeague/BowlingLeague/Views/Home/EditForm.cshtml
@@ -9,10 +9,10 @@
 <div>
 
     <form method="post" asp-action="EditForm">
-        <div class="form-group">
+        @*<div class="form-group">
             <label asp-for="BowlerID">ID:</label>
             <input asp-for="BowlerID" value="@Model.BowlerID" />
-        </div>
+        </div>*@
 
         <div class="form-group">
             <label asp-for="BowlerFirstName">First Name:</label>
@@ -57,20 +57,14 @@
         <div class="form-group">
             <label asp-for="TeamID">Team:</label>
             <select class="form-control" asp-for="TeamID" value="@Model.TeamID">
-                <option value="1">Marlins</option>
-                <option value="2">Sharks</option>
-                <option value="3">Terrapins</option>
-                <option value="4">Barracudas</option>
-                <option value="5">Dolphins</option>
-                <option value="6">Orcas</option>
-                <option value="7">Manatees</option>
-                <option value="8">Swordfish</option>
-                <option value="9">Huckleberrys</option>
-                <option value="10">MintJuleps</option>
+                @foreach (Team b in ViewBag.Teams)
+                {
+                    <option value="@b.TeamID">@b.TeamName</option>
+                }
             </select><br />
         </div>
 
-        <button class="btn btn-outline-primary btn-primary" type="submit">Submit</button>
+        <button class="btn btn-outline-primary btn-warning" type="submit">Submit</button>
     </form>
 
 </div>
