--- a/BowlingLeague/BowlingLeague/Views/Home/SignUpForm.cshtml
+++ b/BowlingLeague/BowlingLeague/Views/Home/SignUpForm.cshtml
@@ -52,20 +52,14 @@
         <div class="form-group">
             <label asp-for="TeamID">Team:</label>
             <select class="form-control" asp-for="TeamID">
-                <option value="1">Marlins</option>
-                <option value="2">Sharks</option>
-                <option value="3">Terrapins</option>
-                <option value="4">Barracudas</option>
-                <option value="5">Dolphins</option>
-                <option value="6">Orcas</option>
-                <option value="7">Manatees</option>
-                <option value="8">Swordfish</option>
-                <option value="9">Huckleberrys</option>
-                <option value="10">MintJuleps</option>
+                @foreach (Team b in ViewBag.Teams)
+                {
+                    <option value="@b.TeamID">@b.TeamName</option>
+                }
             </select><br />
         </div>
 
-        <button class="btn btn-outline-primary btn-primary" type="submit">Submit</button>
+        <button class="btn btn-outline-primary btn-warning" type="submit">Submit</button>
     </form>
 
 </div>
