--- a/BowlingLeague/BowlingLeague/wwwroot/css/site.css
+++ b/BowlingLeague/BowlingLeague/wwwroot/css/site.css
@@ -12,7 +12,7 @@ a {
   color: #0366d6;
 }
 
-.btn-primary {
+.btn-warning {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
