--- a/BowlingLeague/BowlingLeague/Views/Shared/_Layout.cshtml
+++ b/BowlingLeague/BowlingLeague/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <div class="color-byu font-weight-bolder text-white p-2">
         <div class="container-fluid">
             <div class="row">
-                <span class="col navbar-brand m-lg-2">Bookmark It</span>
+                <span class="col navbar-brand m-lg-2">Bowling League</span>
                 <div class="col-6 text-right m-lg-2">
                     <a asp-action="SignUpForm" asp-controller="Home" class="btn btn-sm btn-secondary navbar-btn" style="font-size:17px">Sign Up</a>
                     <a asp-action="Bowlers" asp-controller="Home" class="btn btn-sm btn-secondary navbar-btn" style="font-size:17px">Bowlers</a>
